// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BodyLarge > should render as a "alert" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: var(--cui-fg-danger);
}

<p
  class="circuit-0"
>
  alert
   BodyLarge
</p>
`;

exports[`BodyLarge > should render as a "confirm" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: var(--cui-fg-success);
}

<p
  class="circuit-0"
>
  confirm
   BodyLarge
</p>
`;

exports[`BodyLarge > should render as a "highlight" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-weight: 700;
}

<strong
  class="circuit-0"
>
  highlight
   BodyLarge
</strong>
`;

exports[`BodyLarge > should render as a "quote" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-style: italic;
  padding-left: 12px;
  border-left: 2px solid var(--cui-border-accent);
}

<blockquote
  class="circuit-0"
>
  quote
   BodyLarge
</blockquote>
`;

exports[`BodyLarge > should render as a "subtle" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: var(--cui-fg-subtle);
}

<p
  class="circuit-0"
>
  subtle
   BodyLarge
</p>
`;

exports[`BodyLarge > should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 1.75rem;
}

<p
  class="circuit-0"
>
  BodyLarge
</p>
`;
